# slingshot

./: .cfworker.example.json  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN.md  QUICKSTART.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: instructions  settings.local.json
.claude/agents/: cloudflare-expert.md
cfworker/: client.py  config.py  deployer.py
examples/hello-world/: .cfworker.json  worker.js
examples/kv-storage/: .cfworker.json  worker.js
src/cfworker/: cli.py
src/slingshot/: __init__.py  cli.py  config.py
templates/api/: .cfworker.json  worker.js
templates/edge/: .cfworker.json  worker.js
templates/static/: .cfworker.json  worker.js
tests/: __init__.py  conftest.py  test_cli.py  test_client.py  test_config.py  test_deployer.py
